// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DecoratedListItem component should render 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item"
  >
    <div
      class="decorated-list-item__title tiny"
    >
      Title
    </div>
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DecoratedListItem component should render compact 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item decorated-list-item--compact"
  >
    <div
      class="decorated-list-item__title tiny"
    >
      Title
    </div>
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DecoratedListItem component should render compact without title 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item decorated-list-item--compact"
  >
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DecoratedListItem component should render inline 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item decorated-list-item--inline"
  >
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DecoratedListItem component should render link 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item decorated-list-item--has-link"
  >
    <a
      aria-hidden="true"
      class="decorated-list-item__link"
      data-testid="background-link"
      href="/target"
      tabindex="-1"
    />
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DecoratedListItem component should render without title 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item"
  >
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;
